@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.9 2018/07/28 14:40:47 brook Exp $
+# $NetBSD: Makefile,v 1.10 2019/07/31 19:06:30 brook Exp $
 
-CATEGORIES=	math
+CATEGORIES=	math R
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	${R_HOMEPAGE_BASE}/chron/
@@ -8,7 +8,9 @@ COMMENT=	Chronological objects which can handle dates and times
 LICENSE=	gnu-gpl-v2
 
 R_PKGNAME=	chron
-R_PKGVER=	2.3-47
+R_PKGVER=	2.3-53
+
+USE_LANGUAGES=	c
 
 .include "../../math/R/Makefile.extension"
 .include "../../mk/bsd.pkg.mk"
