@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.7 2016/02/25 19:33:05 fhajny Exp $
+$NetBSD: distinfo,v 1.8 2019/07/31 19:06:30 brook Exp $
 
-SHA1 (R/chron_2.3-47.tar.gz) = 41a5a1ebf21b8d71a3180aac2067771c06ddcc3b
-RMD160 (R/chron_2.3-47.tar.gz) = f74454d3d8e87f59682a09ed9656705554ff949c
-SHA512 (R/chron_2.3-47.tar.gz) = c98cbb717e7384797d17ea35f17ad0107e4cb5bfe4f5c9bff9f230fa500879d662699628eea7a8741572c0cfa5d90c4d63e04d1cc0a1d0b4405156cbc758d8fc
-Size (R/chron_2.3-47.tar.gz) = 36464 bytes
+SHA1 (R/chron_2.3-53.tar.gz) = 5190c3cfc9c48f82016ca2fe7886cad597106123
+RMD160 (R/chron_2.3-53.tar.gz) = fbd19fe6abe9051e9102ba9e0b15fba948e91419
+SHA512 (R/chron_2.3-53.tar.gz) = 9d16f382de23214115bafb5de44977f71485b0f39798f65a44cd781a274618cebffda587b0f1909d605f55bf15fb22e825fe0aa8ead278d3f2c0d211da40190f
+Size (R/chron_2.3-53.tar.gz) = 37351 bytes
